--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,5 @@ Imports:
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/jagadishkatam/meanpkg
+BugReports: https://github.com/jagadishkatam/meanpkg/issues
